# AndroidPdfViewer

./: README.md  build.gradle  common.gradle
android-pdf-viewer/: CMakeLists.txt  build.gradle
android-pdf-viewer/src/main/cpp/: mainJNILib.cpp
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/: CacheManager.java  DragPinchManager.java  PDFView.java  PdfFile.java
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/listener/: Callbacks.java  OnDrawListener2.java
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/mark/: ImageMark.java  PdfMarkManager.java
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/scroll/: DefaultScrollHandle.java
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/util/: Constants.java  PdfViewUtils.java  Util.java
android-pdf-viewer/src/main/java/com/heaven7/android/pdf/: PdfAnnotManager.java  PdfImageObject.java
android-pdf-viewer/src/main/java/com/shockwave/pdfium/: PdfDocument.java  PdfiumCore.java
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/github/barteksc/sample/: DrawingUtils.java  ImageDataHolder.java  PDFViewActivity.java  SimpleTouchListener.java  StickerView.java  TestStickerViewActivity.java  Utils.java
sample/src/main/res/layout/: ac_test_sticker.xml  activity_main.xml
sample/src/main/res/menu/: options.xml
sample/src/main/res/values/: attrs.xml  styles.xml
